--- a/src/Layout/StyleSidebar.css
+++ b/src/Layout/StyleSidebar.css
@@ -87,3 +87,80 @@
     color: #fff;
   }
   
+
+  .Navbar-Vertical {
+    float: right; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    height: 100vh; 
+    position: relative;
+  }
+  
+  ul {
+    position: relative;
+  }
+  
+  ul li {
+    position: relative;
+    list-style: none;
+    width: 150px;
+    min-height: 30px;
+    padding: 20px;
+    background: var(--clr);
+    z-index: 3;
+    transition: 0.5s;
+  }
+  
+  ul li a {
+    text-decoration: none;
+    color: #999;
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .Navbar-Vertical {
+      position: fixed;
+      top: 30px;
+      top: 0;
+      right: -280px; 
+      width: 220px;
+      height: 100%;
+      transition: right 0.3s ease;
+      z-index: 9999; 
+    }
+    
+    .menu-toggle {
+      font-size: 40px;
+      color: #fff;
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+      z-index: 10000;
+    }
+    
+    .bar {
+      width: 100%;
+      height: 10px;
+      background-color: #fff;
+    }
+    
+    .Navbar-Vertical.open {
+      right: 0;
+    }
+  }
+
+
+  @media screen and (min-width: 769px) {
+    .menu-toggle {
+        display: none;
+    }
+}
