--- a/src/Stylesheets/About.css
+++ b/src/Stylesheets/About.css
@@ -1,9 +1,11 @@
-
 .contenedor {
+  margin-top: 40px;
+  bottom: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  flex-direction: column; 
 }
 
 .rectangulo {
@@ -12,6 +14,7 @@
   border-radius: 80px 20px;
   display: flex;
   align-items: center;
+  flex-direction: column; 
   max-width: 700px; 
   margin: 30px; 
 }
@@ -23,19 +26,22 @@
 
 .avatar-general {
   flex: 0 0 auto;
-  margin-right: 30px;
+  margin: 20px; 
 }
 
 .avatar {
+
   width: 150px;
   height: auto;
 }
 
 .texto {
+  margin-top: 40px;
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-start; 
+  align-items: center;
+  text-align: justify; 
 }
 
 .texto p {
@@ -51,7 +57,6 @@
   width: 200px;
   height: 40px;
   margin: 10px;
-  padding:10px 20px;
   background-color: #007bff;
   color: white;
   border: none;
@@ -76,10 +81,9 @@
   position: absolute;
   opacity: 0;
   top: 0;
-  right: -15px;
+  right: -10px;
   transition: 0.5s;
 }
-
 
 .btn-Aboutme:hover span {
   padding-right: 25px;
@@ -88,4 +92,54 @@
 .btn-Aboutme:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+.titulo-2 {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  color: #ddd;
+}
+
+.titulo-2:hover {
+  color: #0087f5;
+}
+
+.titulo-2::after {
+  content: "\1F916";
+  position: absolute;
+  font-size: 50px;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%) translateX(5px);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.3s;
+  display: flex;
+  align-items: center;
+}
+
+.titulo-2:hover::after {
+  opacity: 1; 
+  transform: translateY(-50%) translateX(0); 
+}
+@media (max-width: 768px) {
+  .rectangulo {
+    margin: 40px;
+  }
+
+  .contenido {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .avatar-general {
+    margin-bottom: 10px;
+  }
+
+  .titulo-2 {
+    margin: 20px auto 20px; 
+  }
+
+ 
 }
