--- a/src/Stylesheets/Contact.css
+++ b/src/Stylesheets/Contact.css
@@ -1,64 +1,110 @@
- body {
-background-color: #040c24;
+body {
+  background-color: #040c24;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='86' height='86' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23020a23' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
-}  
+}
 .contact-container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.quote {
+  color: orange;
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 40px;
+  max-width: 600px;
+}
+
+.quote .author {
+  margin-top: 10px;
+  font-style: italic;
+}
+
+.contact-info {
+  text-align: center;
+}
+
+.contact-info h2 {
+  margin-bottom: 20px;
+}
+
+.contact-info p {
+  font-size: 1.2em;
+}
+
+.contact-info a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
+}
+
+.social-links {
+  margin-top: 20px;
+}
+
+.social-links a {
+  margin: 0 10px;
+  display: inline-block;
+  color: #007bff;
+  transition: transform 0.3s, color 0.3s;
+}
+
+.social-links a:hover {
+  color: orange;
+  transform: translateY(-10px);
+}
+
+.titulo-3 {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  color: #ddd;
+}
+
+.titulo-3:hover {
+  color: #0087f5;
+}
+
+.titulo-3::after {
+  content: "\1F916";
+  position: absolute;
+  font-size: 50px;
+  top: 50%;
+  transform: translateY(-50%) translateX(5px);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.3s;
+  display: flex;
+  align-items: center;
+}
+
+.titulo-3:hover::after {
+  opacity: 1;
+  transform: translateY(-50%) translateX(0);
+}
+
+@media (max-width: 768px) {
+  .contact-container {
+    margin: 40px;
+  }
+  .social-links {
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  .quote {
-    color: orange;
-    text-align: center;
-    font-size: 1.5em;
-    margin-bottom: 40px;
-    max-width: 600px;
-  }
-  
-  .quote .author {
-    margin-top: 10px;
-    font-style: italic;
-  }
-  
-  .contact-info {
-    text-align: center;
-  }
-  
-  .contact-info h2 {
-    margin-bottom: 20px;
-  }
-  
-  .contact-info p {
-    font-size: 1.2em;
-  }
-  
-  .contact-info a {
-    color: #007BFF;
-    text-decoration: none;
-  }
-  
-  .contact-info a:hover {
-    text-decoration: underline;
-  }
-  
-  .social-links {
-    margin-top: 20px;
-  }
-  
-  .social-links a {
-    margin: 0 10px;
-    display: inline-block;
-    color: #007BFF;
-    transition: transform 0.3s, color 0.3s;
-  }
-  
-  .social-links a:hover {
-    color: orange;
-    transform: translateY(-10px);
   }
 
+  .social-links a {
+    margin: 10px 0;
+  }
+
+  .titulo-3 {
+    top: 30px;
+  }
+}
