--- a/src/Stylesheets/About.css
+++ b/src/Stylesheets/About.css
@@ -1,6 +1,5 @@
 .contenedor {
-  margin-top: 40px;
-  bottom: 40px;
+  margin:40px;
   display: flex;
   justify-content: center;
   align-items: center;
