--- a/src/Stylesheets/ProyectsCard.css
+++ b/src/Stylesheets/ProyectsCard.css
@@ -105,10 +105,14 @@
 }
 
 .description {
-  text-align: justify;
-  letter-spacing: -1px;
-  font-size: 1em;
   color: #e9e6e6;
+  font-size: 16px;
+  text-align: justify;
+  text-align-last: left;
+  hyphens: auto;
+  letter-spacing: -0.5px;
+  word-spacing: -1px;
+  line-height: 1.5;
 }
 
 .details {
