--- a/src/Stylesheets/Services.css
+++ b/src/Stylesheets/Services.css
@@ -55,7 +55,7 @@
 .iconserv {
   font-size: 70px;
   color: rgb(57, 115, 161);
-  margin: 10px;
+  margin: 5px;
 }
 
 .title-ser {
@@ -63,14 +63,18 @@
 }
 
 .des-ser {
-  font-size: 16px;
+  font-size: 13px;
   text-align: justify;
+  text-align-last: left;
   width: 180px;
-  letter-spacing: -1px;
+  hyphens: auto;
+  word-spacing: -1px;
+  letter-spacing: normal;
 }
 
 .text-card {
+  margin: 10px;
   font-size: 18px;
   font-style: italic;
-  font-weight: 500;
+  font-weight:600;
 }
