--- a/src/Stylesheets/Skills.css
+++ b/src/Stylesheets/Skills.css
@@ -25,6 +25,7 @@
   margin: 0 auto;
 }
 
+
 .cuadrado {
   background-color: rgb(20, 0, 39);
   width: 130px;
@@ -97,12 +98,14 @@
   .container-skills {
     margin-top: 350px;
     grid-template-columns: repeat(3, 1fr); 
+    margin-bottom: 40px;
   }
 }
 
 @media (max-width: 576px) {
   .container-skills {
     margin-top: 350px;
+    margin-bottom: 40px;
     grid-template-columns: repeat(2, 1fr); 
   }
 }
