--- a/src/Stylesheets/ProyectsCard.css
+++ b/src/Stylesheets/ProyectsCard.css
@@ -22,7 +22,7 @@
   margin: 30px 0;
   border-radius: 8px;
   width: 50%; 
-  height: 300px;
+  height: 400px;
   overflow: hidden;
   position: relative;
 }
@@ -77,7 +77,6 @@
 }
 
 .icon-text {
-  margin-top: 8px;
   font-size: 1em;
   background: rgba(0, 0, 0, 0.7);
   color: white;
@@ -87,7 +86,7 @@
   opacity: 0;
   transition: opacity 0.2s, visibility 0.2s;
   position: absolute;
-  top: 35px;
+  top: 80px;
   white-space: nowrap;
 }
 
@@ -106,7 +105,7 @@
 
 .description {
   color: #e9e6e6;
-  font-size: 16px;
+  font-size: 15px;
   text-align: justify;
   text-align-last: left;
   hyphens: auto;
@@ -181,23 +180,37 @@
   color: #0087f5;
 }
 
-.titulo::after {
-  content: "\1F916";
-  position: absolute;
-  font-size: 50px;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%) translateX(5px);
-  opacity: 0;
-  transition: opacity 0.3s, transform 0.3s;
-  display: flex;
-  align-items: center;
-}
-
 .titulo:hover::after {
   opacity: 1; 
   transform: translateY(-50%) translateX(0); 
 }
+
+.filters {
+  margin-bottom: 30px;
+}
+
+.filter-button {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 300;
+  font-size: 1.1em;
+  color: #e9e6e6;
+  margin: 30px;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 2px solid transparent;
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+}
+
+.filter-button:hover {
+  color: #0087f5;
+  border-color: rgb(218, 117, 1);
+}
+
+.filter-button:not(:last-child) {
+  margin-right: 10px;
+}
+
 
 @media (max-width: 760px) {
   .card {
@@ -227,4 +240,35 @@
     font-size: 0.9em;
     margin: 0 auto;
   }
+
+  .filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .filter-button {
+    margin: 10px 0;
+    margin-right: 0; 
+  }
+
+  .filter-button:not(:last-child) {
+    margin-right: 0; 
+  }
+
+  .icon-text {
+    font-size: 1em;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.2s, visibility 0.2s;
+    position: absolute;
+    top: 20px;
+    white-space: nowrap;
+  }
 }
+
