--- a/src/Stylesheets/ProyectsCard.css
+++ b/src/Stylesheets/ProyectsCard.css
@@ -86,7 +86,7 @@
   opacity: 0;
   transition: opacity 0.2s, visibility 0.2s;
   position: absolute;
-  top: 80px;
+  margin-top: 40px;
   white-space: nowrap;
 }
 
